Change some endpoints and remove unused menu buttons

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -29,14 +29,14 @@
                 </a>
             </li>
             <li class="nav-item dropdown {{activeAllBooks}}">
-                <a href="/all-books" class="nav-link">
+                <a href="/books" class="nav-link">
                     <i class="fe fe-book-open fe-16"></i>
                     <span class="ml-3 item-text">All Books</span>
                     <span id="allBooksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeMyBooks}}">
-                <a href="/my-books" class="nav-link">
+                <a href="/books/my-library" class="nav-link">
                     <i class="fe fe-book fe-16"></i>
                     <span class="ml-3 item-text">My Books</span>
                     <span id="myBooksBadgeCount" class="badge badge-pill badge-warning"></span>
@@ -68,19 +68,6 @@
                     <span id="bookmarksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
-            <li class="nav-item dropdown {{activeTrackings}}">
-                <a href="/trackings" class="nav-link">
-                    <i class="fe fe-navigation fe-16"></i>
-                    <span class="ml-3 item-text">Trackings</span>
-                </a>
-            </li>
-            <li class="nav-item dropdown {{activeVideos}}">
-                <a href="/videos" class="nav-link">
-                    <i class="fe fe-video fe-16"></i>
-                    <span class="ml-3 item-text">Videos</span>
-                    <span id="videosBadgeCount" class="badge badge-pill badge-warning"></span>
-                </a>
-            </li>
             <li class="nav-item dropdown {{activeHighlights}}">
                 <a href="/highlights" class="nav-link">
                     <i class="fe fe-scissors fe-16"></i>
@@ -88,19 +75,32 @@
                     <span id="highlightsBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeTrackings}}">
+                <a href="/trackings" class="nav-link">
+                    <i class="fe fe-navigation fe-16"></i>
+                    <span class="ml-3 item-text">Trackings</span>
+                </a>
+            </li>
+            <!-- <li class="nav-item dropdown {{activeVideos}}">
+                <a href="/videos" class="nav-link">
+                    <i class="fe fe-video fe-16"></i>
+                    <span class="ml-3 item-text">Videos</span>
+                    <span id="videosBadgeCount" class="badge badge-pill badge-warning"></span>
+                </a>
+            </li> -->
             <li class="nav-item dropdown {{activeWritings}}">
                 <a href="/writings" class="nav-link">
                     <i class="fe fe-pen-tool fe-16"></i>
                     <span class="ml-3 item-text">Writings</span>
                 </a>
             </li>
-            <li class="nav-item dropdown {{activeTodos}}">
+            <!-- <li class="nav-item dropdown {{activeTodos}}">
                 <a href="/todos" class="nav-link">
                     <i class="fe fe-list fe-16"></i>
                     <span class="ml-3 item-text">TODOs</span>
                     <span id="todosBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
-            </li>
+            </li> -->
             <li class="nav-item dropdown {{activeOneListToRuleThemAll}}">
                 <a href="/all-todos" class="nav-link">
                     <i class="fe fe-layers fe-16"></i>
