--- a/views/finished.mustache
+++ b/views/finished.mustache
@@ -6,45 +6,48 @@
 </head>
 
 <body class="vertical dark">
-    <div class="wrapper">
-        <main role="main" class="main-content">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-12">
+<div class="wrapper">
+    <main role="main" class="main-content">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-12">
 
-                        <!-- simple table -->
-                        <div class="card mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">Finished Books</h5>
-                                    <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
-                                        <thead>
-                                            <tr>
-                                                <th>Author</th>
-                                                <th>Title</th>
-                                                <th>Page</th>
-                                                <th>Started</th>
-                                                <th>Finished</th>
-                                                <th>Rate</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {{#books}}
-                                            <tr>
-                                                <td>{{author}}</td>
-                                                <td>{{title}}</td>
-                                                <td>{{page_count}}</td>
-                                                <td>{{start_date}}</td>
-                                                <td>{{finish_date}}</td>
-                                                <td>
-                                                    {{#rate}}
+                    <!-- simple table -->
+                    <div class="card mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Finished Books</h5>
+                                <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
+                                    <thead>
+                                    <tr>
+                                        <th>Author</th>
+                                        <th>Title</th>
+                                        <th>Page</th>
+                                        <th>Started</th>
+                                        <th>Finished</th>
+                                        <th>Rate</th>
+                                        <th>History</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {{#books}}
+                                        <tr>
+                                            <td>{{author}}</td>
+                                            <td>{{title}}</td>
+                                            <td>{{page_count}}</td>
+                                            <td>{{start_date}}</td>
+                                            <td>{{finish_date}}</td>
+                                            <td>
+                                                {{#rate}}
                                                     {{rate}}
-                                                    {{/rate}}
-                                                    {{^rate}}
+                                                {{/rate}}
+
+                                                {{^rate}}
                                                     <div class="dropdown" id="rate">
                                                         <button class="btn btn-secondary dropdown-toggle" type="button"
-                                                            id="rateButton" data-toggle="dropdown" aria-haspopup="true"
-                                                            aria-expanded="false">
+                                                                id="rateButton" data-toggle="dropdown"
+                                                                aria-haspopup="true"
+                                                                aria-expanded="false">
                                                             Rate
                                                         </button>
                                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -55,41 +58,46 @@
                                                             <a class="dropdown-item rateBook" data-uid="{{uid}}">5</a>
                                                         </div>
                                                     </div>
-                                                    {{/rate}}
-                                                </td>
-                                            </tr>
-                                            {{/books}}
-                                        </tbody>
-                                    </table>
-                                </div>
+                                                {{/rate}}
+                                            </td>
+                                            <td>
+                                                <a class="btn btn-sm btn-info btnReadingHistory" data-uid="{{uid}}"
+                                                   data-toggle="modal" data-target="#readingHistoryModal">History</a>
+                                            </td>
+                                        </tr>
+                                    {{/books}}
+                                    </tbody>
+                                </table>
                             </div>
-                        </div> <!-- simple table -->
-                    </div> <!-- .col-12 -->
-                </div> <!-- .row -->
-            </div> <!-- .container-fluid -->
-        </main> <!-- main -->
-    </div> <!-- .wrapper -->
+                        </div>
+                    </div> <!-- simple table -->
+                </div> <!-- .col-12 -->
+            </div> <!-- .row -->
+        </div> <!-- .container-fluid -->
+    </main> <!-- main -->
+</div> <!-- .wrapper -->
 
-    {{> include}}
-    {{> menu }}
-    {{> navbar }}
+{{> include}}
+{{> menu }}
+{{> navbar }}
+{{> reading-history }}
 
-    <script>
-        $(document).ready(function () {
+<script>
+    $(document).ready(function () {
 
-            $(".rateBook").on('click', function (e) {
-                var bookUID = $(this).data('uid');
-                var rating = $(this).text();
+        $(".rateBook").on('click', function (e) {
+            var bookUID = $(this).data('uid');
+            var rating = $(this).text();
 
-                var result = ajaxCall('PUT', "/books/rate/" + bookUID, "rate=" + rating)
+            var result = ajaxCall('PUT', "/books/rate/" + bookUID, "rate=" + rating)
 
-                if (result !== false) {
-                    location.reload();
-                }
-            });
-
+            if (result !== false) {
+                location.reload();
+            }
         });
-    </script>
+
+    });
+</script>
 </body>
 
 </html>
