Add all books reading history

--- a/views/finished.mustache
+++ b/views/finished.mustache
@@ -80,7 +80,7 @@
 {{> include}}
 {{> menu }}
 {{> navbar }}
-{{> reading-history }}
+{{> reading-history-by-books }}
 
 <script>
     $(document).ready(function () {
