--- a/views/modal/reading-history-by-books.mustache
+++ b/views/modal/reading-history-by-books.mustache
@@ -14,6 +14,7 @@
                                 <table class="table table-striped table-bordered" width="100%">
                                     <thead>
                                     <tr>
+                                        <th>Book</th>
                                         <th>Path</th>
                                         <th>Amount</th>
                                         <th>Date</th>
@@ -22,6 +23,7 @@
                                     <tbody>
                                     {{#data}}
                                         <tr>
+                                            <td>{{author}} - {{title}}
                                             <td>{{pathName}}</td>
                                             <td>{{amount}}</td>
                                             <td>{{record_date}}</td>
