--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -49,6 +49,12 @@
                     <span id="finishedBooksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeReadingHistory}}">
+                <a href="/books/reading-history" class="nav-link">
+                    <i class="fe fe-activity fe-16"></i>
+                    <span class="ml-3 item-text">Reading History</span>
+                </a>
+            </li>
             <li class="nav-item dropdown {{activeCategories}}">
                 <a href="/categories" class="nav-link">
                     <i class="fe fe-layers fe-16"></i>
