--- a/views/finished.mustache
+++ b/views/finished.mustache
@@ -20,6 +20,7 @@
                                 <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
                                     <thead>
                                     <tr>
+                                        <th>Path Name</th>
                                         <th>Author</th>
                                         <th>Title</th>
                                         <th>Page</th>
@@ -32,6 +33,7 @@
                                     <tbody>
                                     {{#books}}
                                         <tr>
+                                            <td>{{pathName}}</td>
                                             <td>{{author}}</td>
                                             <td>{{title}}</td>
                                             <td>{{page_count}}</td>
@@ -51,11 +53,11 @@
                                                             Rate
                                                         </button>
                                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                                            <a class="dropdown-item rateBook" data-uid="{{uid}}">1</a>
-                                                            <a class="dropdown-item rateBook" data-uid="{{uid}}">2</a>
-                                                            <a class="dropdown-item rateBook" data-uid="{{uid}}">3</a>
-                                                            <a class="dropdown-item rateBook" data-uid="{{uid}}">4</a>
-                                                            <a class="dropdown-item rateBook" data-uid="{{uid}}">5</a>
+                                                            <a class="dropdown-item rateBook" data-id="{{id}}">1</a>
+                                                            <a class="dropdown-item rateBook" data-id="{{id}}">2</a>
+                                                            <a class="dropdown-item rateBook" data-id="{{id}}">3</a>
+                                                            <a class="dropdown-item rateBook" data-id="{{id}}">4</a>
+                                                            <a class="dropdown-item rateBook" data-id="{{id}}">5</a>
                                                         </div>
                                                     </div>
                                                 {{/rate}}
@@ -86,10 +88,10 @@
     $(document).ready(function () {
 
         $(".rateBook").on('click', function (e) {
-            var bookUID = $(this).data('uid');
+            var finishedBookID = $(this).data('id');
             var rating = $(this).text();
 
-            var result = ajaxCall('PUT', "/books/rate/" + bookUID, "rate=" + rating)
+            var result = ajaxCall('PUT', "/books/rate/" + finishedBookID, "rate=" + rating)
 
             if (result !== false) {
                 location.reload();
