--- a/views/modal/add-book.mustache
+++ b/views/modal/add-book.mustache
@@ -16,23 +16,13 @@
                         <input type="text" id="bookTitle" name="bookTitle" placeholder="Title" class="form-control">
                     </div>
 
-                    <div class="form-row">
-                        <div class="form-group col-md-9">
-                            <label for="authors">Author:</label>
-                            <select id="authors" name="authors[]" class="form-control select2-multi">
-                                {{#authors}}
-                                    <option value="{{id}}">{{author}}</option>
-                                {{/authors}}
-                            </select>
-                        </div>
-                        <div class="form-group col-md-3">
-                            <label for="category">Category:</label>
-                            <select id="category" name="category" class="form-control">
-                                {{#categories}}
-                                    <option value="{{id}}">{{name}}</option>
-                                {{/categories}}
-                            </select>
-                        </div>
+                    <div class="form-group">
+                        <label for="authors">Author:</label>
+                        <select id="authors" name="authors[]" class="form-control select2-multi">
+                            {{#authors}}
+                                <option value="{{id}}">{{author}}</option>
+                            {{/authors}}
+                        </select>
                     </div>
 
                     <div class="form-row">
@@ -79,6 +69,11 @@
                     <div class="form-group">
                         <label for="notes">Notes:</label>
                         <input id="notes" name="notes" placeholder="Notes" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="tags">Tags:</label>
+                        <input id="tags" placeholder="Tags" type="text" class="form-control">
                     </div>
                 </form>
             </div>
