Change tagging logic, add is_deleted status, add user id column

--- a/views/bookmarks/highlights.mustache
+++ b/views/bookmarks/highlights.mustache
@@ -31,7 +31,7 @@
 
                         <ul>
                             {{#highlights}}
-                            <li>{{{html}}}</li>
+                            <li>{{{highlight}}}</li>
                             {{/highlights}}
                         </ul>
 
